syntax = "proto3";
package xmtp.message.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = ".;message";

message Error {
  string code = 1;
  string message = 2;
}

// Envelope encapsulates a message while in transit.
message Envelope {
  string id = 1;
  string content_topic = 2;
  google.protobuf.Timestamp timestamp = 3;
  bytes message = 4;
}

// RPC
service Message {
  rpc Publish (PublishRequest) returns (PublishResponse) {
    option (google.api.http) = {
        post: "/message/v1/publish"
        body: "*"
    };
  }
  rpc Subscribe (SubscribeRequest) returns (stream Envelope) {
    option (google.api.http) = {
        post: "/message/v1/subscribe"
        body: "*"
    };
  }
  rpc Query (QueryRequest) returns (QueryResponse) {
    option (google.api.http) = {
        post: "/message/v1/query"
        body: "*"
    };
  }
}

// Publish

message PublishRequest {
  string content_topic = 1;
  bytes message = 2;
}

message PublishResponse{
}

// Subscribe

message SubscribeRequest {
  string content_topic = 1;
}

message SubscribeResponse{
  string id = 1;
  string error = 2;
}


// Query

message QueryRequest {
  string content_topic = 1;
  uint32 limit = 2;
  enum SortDirection {
    SORT_DIRECTION_UNSPECIFIED = 0;
    SORT_DIRECTION_ASCENDING = 1;
    SORT_DIRECTION_DESCENDING = 2;
  }
  SortDirection sort_direction = 3;
}

message QueryResponse{
  repeated Envelope envelopes = 1;
}
